--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12933,7 +12933,7 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
 }
 
 .banner-area-one {
-  background-image: url(../images/banner/01.webp);
+  background-image: url(../images/banner/image2.jpg);
   position: relative;
   height: 798px;
   display: flex;
@@ -18739,9 +18739,17 @@ li.has-dropdown:hover .submenu {
 }
 
 .rts-breadcrumb-area {
-  background-image: url(../images/breadcrumb/01.jpg);
+  background-image: url(../images/breadcrumb/faq.png);
 }
-
+.rts-breadcrumb-area2 {
+  background-image: url(../images/breadcrumb/about.jpg);
+}
+.rts-breadcrumb-area3 {
+  background-image: url(../images/breadcrumb/contact.jpg);
+}
+.rts-breadcrumb-area4 {
+  background-image: url(../images/service/17.webp);
+}
 .breadcrumb-area-wrapper {
   text-align: center;
   align-items: center;
