--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18750,6 +18750,9 @@ li.has-dropdown:hover .submenu {
 .rts-breadcrumb-area4 {
   background-image: url(../images/service/17.webp);
 }
+.rts-breadcrumb-area5 {
+  background-image: url(../images/breadcrumb/service.jpg);
+}
 .breadcrumb-area-wrapper {
   text-align: center;
   align-items: center;
