--- a/assets/css/service.css
+++ b/assets/css/service.css
@@ -359,3 +359,33 @@ body {
     line-height: 1.6;
     color: var(--gris-fonce);
 }
+
+@media screen and (max-width: 768px) {
+    .tech-equipements {
+        padding: 0 12px;
+        font-size: 16px;
+    }
+
+    .tech-equipements .section-title {
+        font-size: 22px !important;
+        line-height: 1.3;
+    }
+
+    .tech-equipements .lead {
+        font-size: 15px;
+    }
+
+    .tech-equipements .highlight-box {
+        padding: 16px;
+        font-size: 15px;
+    }
+
+    .tech-equipements ul li {
+        font-size: 15px;
+        margin-top: 15%;
+    }
+
+    .tech-equipements p {
+        font-size: 15px;
+    }
+}
