modification de Gerard, j'ai mis les styles de modification en css interne dans le header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12933,7 +12933,7 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
 }
 
 .banner-area-one {
-  background-image: url(../images/banner/image2.jpg);
+  background-image: url(../images/banner/hero.jpg);
   position: relative;
   height: 798px;
   display: flex;
